[package]
name = "with_lock_auto"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["arc", "mutex"]
categories = ["development-tools"]
description = "A simple tool to easily and safely access arc-mutexes without"
homepage = "https://crates.io/crates/with_lock_auto"
repository = "https://github.com/vaqxai/rust_with_lock"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
